gcc/testsuite/rust/rustc/ui/suggestions/suggest-closure-return-type-2.rs
fn main() {
    let _v = || { [] }; // { dg-error ".E0282." "" { target *-*-* } }
}

